@@ -1,16 +1,17 @@
-FROM openjdk:8-jdk-alpine
+FROM gradle:6.4-jdk8 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
 
+ENV REDIS_HOST 127.0.0.1
 
-# DEMO (RUN)
-LABEL maintainer=manguilar22@gmail.com
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
 
-WORKDIR /app
-
-# Load Built JAR File
-COPY ./build/libs/fast-track-0.0.1-SNAPSHOT.jar .
-
-ENV MYSQL_HOSTNAME 127.0.0.1
+FROM openjdk:8-jre-slim
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "fast-track-0.0.1-SNAPSHOT.jar"]
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
